<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="3dp"
        android:scrollbarThumbVertical="@drawable/backgroud_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="3dp"
                    android:text="@string/speech_settings"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:paddingStart="18dp"
                    android:paddingEnd="1dp"
                    android:text="@string/speed"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/voiceSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:progress="50"
                    android:progressBackgroundTint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="18dp"
                    android:paddingEnd="1dp"
                    android:text="@string/pitch"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/voicePitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:progress="50"
                    android:progressBackgroundTint="@color/black" />


                <TextView
                    android:id="@+id/femaleVHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="3dp"
                    android:text="@string/female_voices"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/f0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_voice"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_1"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_2"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_3"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_4"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_5"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_6"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_7"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_8"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_9"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_10"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/f11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female_11"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>